force-app/main/default/objects/Customer_Business_Review_Notes__c/Customer_Business_Review_Notes__c.object-meta.xml
<CustomObject>
    <description>Used track the results of Customer Business Review meetings.</description>
    <label>Customer Business Review Notes</label>
    <nameField>
        <label>CBR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Business Review Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>