force-app/main/default/objects/Customer_Business_Review_Notes__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Account_Plan__r.Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>