force-app/main/default/objects/Customer_Business_Review_Notes__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <inlineHelpText>The account plan to which these CBR Notes are related.</inlineHelpText>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Customer Business Review Notes</relationshipLabel>
    <relationshipName>Customer_Business_Review_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>