force-app/main/default/objects/Customer_Business_Review_Notes__c/fields/Customer_Business_Review_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Review_Details__c</fullName>
    <inlineHelpText>Enter notes regarding your customer business review meeting with this customer.</inlineHelpText>
    <label>Customer Business Review Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>