force-app/main/default/objects/Customer_Business_Review_Notes__c/fields/Date_of_Actual_CBR_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Actual_CBR_Meeting__c</fullName>
    <label>Date of Actual CBR Meeting</label>
    <type>Date</type>
</CustomField>