force-app/main/default/objects/Customer_Business_Review_Notes__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Required?</label>
    <type>Checkbox</type>
</CustomField>