force-app/main/default/objects/Customer_Business_Review_Notes__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <formula>Account_Plan__r.Primary_Sales_Rep__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Sales Rep</label>
    <type>Text</type>
</CustomField>